# ChangeLog for app-office/openoffice-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.221 2010/01/14 16:48:30 suka Exp $

*openoffice-bin-3.2.0_rc2 (14 Jan 2010)

  14 Jan 2010; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-bin-3.2.0_rc2.ebuild:
  Add RC2 for openoffice-bin 3.2.0, still masked

  26 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-bin-3.0.0.ebuild, -openoffice-bin-3.1.0.ebuild:
  Remove vulnerable versions for security bug #283370

  26 Sep 2009; Tobias Heinlein <keytoaster@gentoo.org>
  openoffice-bin-3.1.1.ebuild:
  amd64 stable, security bug #283370

  23 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  openoffice-bin-3.1.1.ebuild:
  stable x86, security bug 283370

  02 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-bin-3.0.1.ebuild
  Remove old release

*openoffice-bin-3.1.1 (02 Sep 2009)

  02 Sep 2009; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-bin-3.1.1.ebuild:
  Add ebuild for OpenOffice.org 3.1.1

  26 May 2009; Andreas Proschofsky <suka@gentoo.org>
  openoffice-bin-3.1.0.ebuild:
  Add back swedish language support, bug #270529

  17 May 2009; Andreas Proschofsky <suka@gentoo.org>
  openoffice-bin-3.1.0.ebuild:
  Accidentally missed spanish translation, bug #269601

*openoffice-bin-3.1.0 (08 May 2009)

  08 May 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-bin-3.1.0_rc1.ebuild, +openoffice-bin-3.1.0.ebuild:
  OpenOffice.org 3.1.0. All the language packs and amd64-support are back

*openoffice-bin-3.1.0_rc1 (08 Apr 2009)

  08 Apr 2009; Andreas Proschofsky <suka@gentoo.org>
  +openoffice-bin-3.1.0_rc1.ebuild:
  RC1 for OpenOffice.org 3.1. This adds back AMD64-support. Please also note
  that this release is missing some language packs, these should be back
  with RC2

*openoffice-bin-3.0.1 (04 Feb 2009)

  04 Feb 2009; Andreas Proschofsky <suka@gentoo.org>