@@ -1,6 +1,12 @@
 # ChangeLog for app-office/openoffice-bin
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.221 2010/01/14 16:48:30 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.222 2010/01/28 09:20:06 suka Exp $
+
+*openoffice-bin-3.2.0_rc4 (28 Jan 2010)
+
+  28 Jan 2010; Andreas Proschofsky <suka@gentoo.org>
+  -openoffice-bin-3.2.0_rc2.ebuild, +openoffice-bin-3.2.0_rc4.ebuild:
+  Bump to newer release candidate for OOo 3.2.0
 
 *openoffice-bin-3.2.0_rc2 (14 Jan 2010)
 
